--- a/index.html
+++ b/index.html
@@ -9,10 +9,25 @@
 		<title>Ethereal by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
 
 	</head>
-	<body
-	      <p>Hello World !</p>
+	<body class="is-preload">
+		<!-- Page Wrapper -->
+		<div id="page-wrapper">
 
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Panel (Banner) -->
+					<section class="panel banner right">
+						<div class="content color0 span-3-75">
+							<h1 class="major">Hello, my name<br />
+							is Ethereal</h1>
+							<p>This is <strong>Ethereal</strong>, a free site template by AJ for <a href="https://html5up.net">HTML5 UP</a>. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you dig it :)</p>
+						</div>
+					</section>
+			</div>
+		</div>
 	</body>
 </html>
