--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
 	</head>
 	<body class="is-preload">
@@ -19,14 +20,14 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- Panel (Banner) -->
-					<section class="panel banner right">
-						<div class="content color0 span-3-75">
-							<h1 class="major">Hello, my name<br />
-							is Ethereal</h1>
-							<p>This is <strong>Ethereal</strong>, a free site template by AJ for <a href="https://html5up.net">HTML5 UP</a>. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you dig it :)</p>
-						</div>
-					</section>
+			<!-- Panel (Banner) -->
+			<section class="panel banner right">
+				<div class="content color0 span-3-75">
+					<h1 class="major">Hello, my name<br />
+					is Ethereal</h1>
+					<p>This is <strong>Ethereal</strong>, a free site template by AJ for <a href="https://html5up.net">HTML5 UP</a>. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you dig it :)</p>
+				</div>
+			</section>
 			</div>
 		</div>
 	</body>
