--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
-									<img src="images/russell 2.jpg" alt="" />
+									<img src="images/russell.jpg" alt="" />
 								</div>
 							</section>
 
