--- a/index.html
+++ b/index.html
@@ -101,22 +101,22 @@
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
                 <div class="image filtered tinted" data-position="top left">
-									<img src="images/gallery/Europe_2017/images/Amsterdam_DCS_1759.jpg" alt="" />
+									<img src="images/gallery/Europe 2017/images/Amsterdam_DCS_1759.jpg" alt="" />
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="images/gallery/Europe_2017/images/Amsterdam_DCS_1745.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/Europe_2017/images/Amsterdam_DCS_1745.jpg" alt="" /></a>
-										<a href="images/gallery/Europe_2017/images/Amsterdam_DCS_1783 Edam.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Europe_2017/images/Amsterdam_DCS_1783 Edam.jpg" alt="" /></a>
-										<a href="images/gallery/Europe_2017/images/Bruges_DCS_1841.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Europe_2017/images/Bruges_DCS_1841.jpg" alt="" /></a>
+										<a href="images/gallery/Europe 2017/images/Amsterdam_DCS_1745.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/Europe 2017/images/Amsterdam_DCS_1745.jpg" alt="" /></a>
+										<a href="images/gallery/Europe 2017/images/Amsterdam_DCS_1783 Edam.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Europe 2017/images/Amsterdam_DCS_1783 Edam.jpg" alt="" /></a>
+										<a href="images/gallery/Europe 2017/images/Bruges_DCS_1841.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Europe 2017/images/Bruges_DCS_1841.jpg" alt="" /></a>
 									</div>
-									<a href="images/gallery/Europe_2017/images/Bruges_DCS_1852.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/Europe_2017/images/Bruges_DCS_1852.jpg" alt="" /></a>
+									<a href="images/gallery/Europe 2017/images/Bruges_DCS_1852.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/Europe 2017/images/Bruges_DCS_1852.jpg" alt="" /></a>
 									<div class="group span-4-5">
-										<a href="images/gallery/Europe_2017/images/Interlaken_DCS_1955.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Europe_2017/images/Interlaken_DCS_1955.jpg" alt="" /></a>
-										<a href="images/gallery/Europe_2017/images/Luxembourg_DCS_2056.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Europe_2017/images/Luxembourg_DCS_2056.jpg" alt="" /></a>
-										<a href="images/gallery/Europe_2017/images/Luxembourg_DCS_2072.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Europe_2017/images/Luxembourg_DCS_2072.jpg" alt="" /></a>
-										<a href="images/gallery/Europe_2017/images/Luxembourg_DCS_2118.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Europe_2017/images/Luxembourg_DCS_2118.jpg" alt="" /></a>
+										<a href="images/gallery/Europe 2017/images/Interlaken_DCS_1955.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Europe 2017/images/Interlaken_DCS_1955.jpg" alt="" /></a>
+										<a href="images/gallery/Europe 2017/images/Luxembourg_DCS_2056.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Europe 2017/images/Luxembourg_DCS_2056.jpg" alt="" /></a>
+										<a href="images/gallery/Europe 2017/images/Luxembourg_DCS_2072.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Europe 2017/images/Luxembourg_DCS_2072.jpg" alt="" /></a>
+										<a href="images/gallery/Europe 2017/images/Luxembourg_DCS_2118.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Europe 2017/images/Luxembourg_DCS_2118.jpg" alt="" /></a>
 									</div>
-									<a href="images/gallery/Europe_2017/images/Strasbourg_DCS_1982.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/Europe_2017/images/Strasbourg_DCS_1982.jpg" alt="" /></a>
+									<a href="images/gallery/Europe 2017/images/Strasbourg_DCS_1982.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/Europe 2017/images/Strasbourg_DCS_1982.jpg" alt="" /></a>
 								</div>
 							</section>
 
@@ -127,22 +127,22 @@
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
                 <div class="image filtered tinted" data-position="top left">
-									<img src="images/gallery/Europe_2016/images/Prague_DCS_0569.jpg" alt="" />
+									<img src="images/gallery/Europe 2016/images/Prague_DCS_0569.jpg" alt="" />
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="images/gallery/Europe_2016/images/Budapest_DCS_0749.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/Europe_2016/images/Budapest_DCS_0749.jpg" alt="" /></a>
-										<a href="images/gallery/Europe_2016/images/Budapest_DCS_0756.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Europe_2016/images/Budapest_DCS_0756.jpg" alt="" /></a>
-										<a href="images/gallery/Europe_2016/images/Cesky Krumlov_DCS_0493.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Europe_2016/images/Cesky Krumlov_DCS_0493.jpg" alt="" /></a>
+										<a href="images/gallery/Europe 2016/images/Budapest_DCS_0749.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/Europe 2016/images/Budapest_DCS_0749.jpg" alt="" /></a>
+										<a href="images/gallery/Europe 2016/images/Budapest_DCS_0756.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Europe 2016/images/Budapest_DCS_0756.jpg" alt="" /></a>
+										<a href="images/gallery/Europe 2016/images/Cesky Krumlov_DCS_0493.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Europe 2016/images/Cesky Krumlov_DCS_0493.jpg" alt="" /></a>
 									</div>
-									<a href="images/gallery/Europe_2016/images/Hall_DCS_0345.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/Europe_2016/images/Hall_DCS_0345.jpg" alt="" /></a>
+									<a href="images/gallery/Europe 2016/images/Hall_DCS_0345.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/Europe 2016/images/Hall_DCS_0345.jpg" alt="" /></a>
 									<div class="group span-4-5">
-										<a href="images/gallery/Europe_2016/images/Hallstatt_DCS_0404.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Europe_2016/images/Hallstatt_DCS_0404.jpg" alt="" /></a>
-										<a href="images/gallery/Europe_2016/images/Hallstatt_DCS_0472.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Europe_2016/images/Hallstatt_DCS_0472.jpg" alt="" /></a>
-										<a href="images/gallery/Europe_2016/images/Luzerne_DCS_0286.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Europe_2016/images/Luzerne_DCS_0286.jpg" alt="" /></a>
-										<a href="images/gallery/Europe_2016/images/Prague_DCS_0526.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Europe_2016/images/Prague_DCS_0526.jpg" alt="" /></a>
+										<a href="images/gallery/Europe 2016/images/Hallstatt_DCS_0404.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Europe 2016/images/Hallstatt_DCS_0404.jpg" alt="" /></a>
+										<a href="images/gallery/Europe 2016/images/Hallstatt_DCS_0472.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Europe 2016/images/Hallstatt_DCS_0472.jpg" alt="" /></a>
+										<a href="images/gallery/Europe 2016/images/Luzerne_DCS_0286.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Europe 2016/images/Luzerne_DCS_0286.jpg" alt="" /></a>
+										<a href="images/gallery/Europe 2016/images/Prague_DCS_0526.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Europe 2016/images/Prague_DCS_0526.jpg" alt="" /></a>
 									</div>
-									<a href="images/gallery/Europe_2016/images/Vienna_DCS_0688.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/Europe_2016/images/Vienna_DCS_0688.jpg" alt="" /></a>
+									<a href="images/gallery/Europe 2016/images/Vienna_DCS_0688.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/Europe 2016/images/Vienna_DCS_0688.jpg" alt="" /></a>
 								</div>
 							</section>
 
