--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="wrapper">
 
 						<!-- Panel (Banner) -->
-							<section class="panel banner right">
+							<section class="panel banner right" id="home">
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hello. Welcome to<br />
 									Running Rabbit Photography</h1>
@@ -45,26 +45,29 @@
 						<!-- Panel Greece 2019 -->
             	<section class="panel" id="Greece 2019">
                 <div class="image filtered tinted" data-position="top left">
-									<img src="images/gallery/greece/images/X_Crete_DCS_3743.jpg" alt="" />
+									<img src="images/gallery/Greece/images/X_Crete_DCS_3743.jpg" alt="" />
 								</div>
                 <div class="intro color1">
 									<h2 class="major">Greece 2019</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+                  <ul class="actions">
+										<li><a href="#home" class="button primary color1 circle icon solid fa-angle-left">Home</a></li>
+									</ul>
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="images/gallery/greece/images/Mykonos_DCS_3390.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/greece/images/Mykonos_DCS_3390.jpg" alt="" /></a>
-										<a href="images/gallery/greece/images/Naxos_DCS_3507.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/greece/images/Naxos_DCS_3507.jpg" alt="" /></a>
-										<a href="images/gallery/greece/images/Santorini_DCS_3537.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/greece/images/Santorini_DCS_3537.jpg" alt="" /></a>
+										<a href="images/gallery/Greece/images/Mykonos_DCS_3390.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/Greece/images/Mykonos_DCS_3390.jpg" alt="" /></a>
+										<a href="images/gallery/Greece/images/Naxos_DCS_3507.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Greece/images/Naxos_DCS_3507.jpg" alt="" /></a>
+										<a href="images/gallery/Greece/images/Santorini_DCS_3537.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Greece/images/Santorini_DCS_3537.jpg" alt="" /></a>
 									</div>
-									<a href="images/gallery/greece/images/Santorini_DCS_3558.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/greece/images/Santorini_DCS_3558.jpg" alt="" /></a>
+									<a href="images/gallery/Greece/images/Santorini_DCS_3558.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/Greece/images/Santorini_DCS_3558.jpg" alt="" /></a>
 									<div class="group span-4-5">
-										<a href="images/gallery/greece/images/Santorini_DCS_3657.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/greece/images/Santorini_DCS_3657.jpg" alt="" /></a>
-										<a href="images/gallery/greece/images/Santorini_DCS_3698.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/greece/images/Santorini_DCS_3698.jpg" alt="" /></a>
-										<a href="images/gallery/greece/images/X_Crete_DCS_3721.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/greece/images/X_Crete_DCS_3721.jpg" alt="" /></a>
-										<a href="images/gallery/greece/images/X_Crete_DCS_3733.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/greece/images/X_Crete_DCS_3733.jpg" alt="" /></a>
+										<a href="images/gallery/Greece/images/Santorini_DCS_3657.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Greece/images/Santorini_DCS_3657.jpg" alt="" /></a>
+										<a href="images/gallery/Greece/images/Santorini_DCS_3698.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Greece/images/Santorini_DCS_3698.jpg" alt="" /></a>
+										<a href="images/gallery/Greece/images/X_Crete_DCS_3721.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Greece/images/X_Crete_DCS_3721.jpg" alt="" /></a>
+										<a href="images/gallery/Greece/images/X_Crete_DCS_3733.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Greece/images/X_Crete_DCS_3733.jpg" alt="" /></a>
 									</div>
-									<a href="images/gallery/greece/images/X_Crete_DCS_3735.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/greece/images/X_Crete_DCS_3735.jpg" alt="" /></a>
+									<a href="images/gallery/Greece/images/X_Crete_DCS_3735.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/Greece/images/X_Crete_DCS_3735.jpg" alt="" /></a>
 								</div>
 							</section>
 
@@ -73,24 +76,27 @@
                 <div class="intro color1">
 									<h2 class="major">Alaska 2018</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+                  <ul class="actions">
+										<li><a href="#home" class="button primary color1 circle icon solid fa-angle-left">Home</a></li>
+									</ul>
 								</div>
                 <div class="image filtered tinted" data-position="top left">
-									<img src="images/gallery/alaska/images/DCS_2652.jpg" alt="" />
+									<img src="images/gallery/Alaska/images/DCS_2652.jpg" alt="" />
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="images/gallery/alaska/images/DCS_2659.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/alaska/images/DCS_2659.jpg" alt="" /></a>
-										<a href="images/gallery/alaska/images/DCS_2679.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/alaska/images/DCS_2679.jpg" alt="" /></a>
-										<a href="images/gallery/alaska/images/DCS_2712.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/alaska/images/DCS_2712.jpg" alt="" /></a>
+										<a href="images/gallery/Alaska/images/DCS_2659.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/Alaska/images/DCS_2659.jpg" alt="" /></a>
+										<a href="images/gallery/Alaska/images/DCS_2679.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Alaska/images/DCS_2679.jpg" alt="" /></a>
+										<a href="images/gallery/Alaska/images/DCS_2712.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Alaska/images/DCS_2712.jpg" alt="" /></a>
 									</div>
-									<a href="images/gallery/alaska/images/DCS_2740.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/alaska/images/DCS_2740.jpg" alt="" /></a>
+									<a href="images/gallery/Alaska/images/DCS_2740.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/Alaska/images/DCS_2740.jpg" alt="" /></a>
 									<div class="group span-4-5">
-										<a href="images/gallery/alaska/images/DCS_2795.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/alaska/images/DCS_2795.jpg" alt="" /></a>
-										<a href="images/gallery/alaska/images/DCS_2883.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/alaska/images/DCS_2883.jpg" alt="" /></a>
-										<a href="images/gallery/alaska/images/DCS_3053.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/alaska/images/DCS_3053.jpg" alt="" /></a>
-										<a href="images/gallery/alaska/images/DCS_3112.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/alaska/images/DCS_3112.jpg" alt="" /></a>
+										<a href="images/gallery/Alaska/images/DCS_2795.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Alaska/images/DCS_2795.jpg" alt="" /></a>
+										<a href="images/gallery/Alaska/images/DCS_2883.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Alaska/images/DCS_2883.jpg" alt="" /></a>
+										<a href="images/gallery/Alaska/images/DCS_3053.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Alaska/images/DCS_3053.jpg" alt="" /></a>
+										<a href="images/gallery/Alaska/images/DCS_3112.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Alaska/images/DCS_3112.jpg" alt="" /></a>
 									</div>
-									<a href="images/gallery/alaska/images/IMG_0166.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/alaska/images/IMG_0166.jpg" alt="" /></a>
+									<a href="images/gallery/Alaska/images/IMG_0166.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/Alaska/images/IMG_0166.jpg" alt="" /></a>
 								</div>
 							</section>
 
@@ -99,6 +105,9 @@
                 <div class="intro color1">
 									<h2 class="major">Europe 2017</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+                	<ul class="actions">
+										<li><a href="#home" class="button primary color1 circle icon solid fa-angle-left">Home</a></li>
+									</ul>
 								</div>
                 <div class="image filtered tinted" data-position="top left">
 									<img src="images/gallery/Europe 2017/images/Amsterdam_DCS_1759.jpg" alt="" />
@@ -125,6 +134,9 @@
                 <div class="intro color1">
 									<h2 class="major">Europe 2016</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+                	<ul class="actions">
+										<li><a href="#home" class="button primary color1 circle icon solid fa-angle-left">Home</a></li>
+									</ul>
 								</div>
                 <div class="image filtered tinted" data-position="top left">
 									<img src="images/gallery/Europe 2016/images/Prague_DCS_0569.jpg" alt="" />
@@ -151,6 +163,9 @@
                 <div class="intro color1">
 									<h2 class="major">Costa Rica 2015</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+                  <ul class="actions">
+										<li><a href="#home" class="button primary color1 circle icon solid fa-angle-left">Home</a></li>
+									</ul>
 								</div>
                 <div class="image filtered tinted" data-position="top left">
 									<img src="images/gallery/Costa Rica/images/Cost_Turt_IMGP1583.jpg" alt="" />
@@ -177,6 +192,9 @@
                 <div class="intro color1">
 									<h2 class="major">Peru 2015</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+                	<ul class="actions">
+										<li><a href="#home" class="button primary color1 circle icon solid fa-angle-left">Home</a></li>
+									</ul>
 								</div>
                 <div class="image filtered tinted" data-position="top left">
 									<img src="images/gallery/Peru/images/Peru_Olla_IMGP1444.jpg" alt="" />
