--- a/index.html
+++ b/index.html
@@ -216,6 +216,63 @@
 								</div>
 							</section>
 
+						<!-- Panel Spain 2013 -->
+							<section class="panel" id="Spain 2013">
+								<div class="intro color1">
+									<h2 class="major">Spain 2013</h2>
+									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<ul class="actions">
+										<li><a href="#home" class="button primary color1 circle icon solid fa-angle-left">Home</a></li>
+									</ul>
+								</div>
+								<div class="image filtered tinted" data-position="top left">
+									<img src="images/gallery/Spain/images/valencia_0630.jpg" alt="" />
+								</div>
+								<div class="gallery">
+									<div class="group span-3">
+										<a href="images/gallery/Spain/images/barcelona_0730.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/Spain/images/barcelona_0730.jpg" alt="" /></a>
+										<a href="images/gallery/Spain/images/barcelona_0734.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Spain/images/barcelona_0734.jpg" alt="" /></a>
+										<a href="images/gallery/Spain/images/granada_0571.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Spain/images/granada_0571.jpg" alt="" /></a>
+									</div>
+									<a href="images/gallery/Spain/images/granada_0577.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/Spain/images/granada_0577.jpg" alt="" /></a>
+									<div class="group span-4-5">
+										<a href="images/gallery/Spain/images/granada_0591.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Spain/images/granada_0591.jpg" alt="" /></a>
+										<a href="images/gallery/Spain/images/montserrat_0702.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Spain/images/montserrat_0702.jpg" alt="" /></a>
+										<a href="images/gallery/Spain/images/ronda_0500.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Spain/images/ronda_0500.jpg" alt="" /></a>
+										<a href="images/gallery/Spain/images/ronda_0542.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Spain/images/ronda_0542.jpg" alt="" /></a>
+									</div>
+									<a href="images/gallery/Spain/images/toledo_0460.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/Spain/images/toledo_0460.jpg" alt="" /></a>
+								</div>
+							</section>
+
+						<!-- Panel Italy 2012 -->
+							<section class="panel" id="Italy 2012">
+								<div class="intro color1">
+									<h2 class="major">Italy 2012</h2>
+									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<ul class="actions">
+										<li><a href="#home" class="button primary color1 circle icon solid fa-angle-left">Home</a></li>
+									</ul>
+								</div>
+								<div class="image filtered tinted" data-position="top left">
+									<img src="images/gallery/Italy/images/VE0138.jpg" alt="" />
+								</div>
+								<div class="gallery">
+									<div class="group span-3">
+										<a href="images/gallery/Italy/images/CO0014.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/Italy/images/CO0014.jpg" alt="" /></a>
+										<a href="images/gallery/Italy/images/CO0030.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Italy/images/CO0030.jpg" alt="" /></a>
+										<a href="images/gallery/Italy/images/CT0111Riomaggiore.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Italy/images/CT0111Riomaggiore.jpg" alt="" /></a>
+									</div>
+									<div class="group span-4-5">
+										<a href="images/gallery/Italy/images/CT0126Manarola.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Italy/images/CT0126Manarola.jpg" alt="" /></a>
+										<a href="images/gallery/Italy/images/FL0277.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Italy/images/FL0277.jpg" alt="" /></a>
+										<a href="images/gallery/Italy/images/PI0039.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Italy/images/PI0039.jpg" alt="" /></a>
+										<a href="images/gallery/Italy/images/VE0146.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Italy/images/VE0146.jpg" alt="" /></a>
+									</div>
+									<a href="images/gallery/Italy/images/VE0154.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/Italy/images/VE0154.jpg" alt="" /></a>
+								</div>
+							</section>
+
 						<!-- Panel 5 -->
 							<section class="panel color4-alt">
 								<div class="intro color4">
