--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 										<li><a href="#Alaska 2018">Alaska 2018</a></li>
 										<li><a href="#Europe 2017">Europe 2017</a></li>
 										<li><a href="#Europe 2016">Europe 2016</a></li>
-										<li><a href="#Costa Rica 2015">Costa Rica 2015</a></li>
+									</ul>
+									<ul class="actions">
 										<li><a href="#Peru 2015">Peru 2015</a></li>
+										<li><a href="#Costa Rica 2015">Costa Rica 2015</a></li>
 										<li><a href="#Spain 2013">Spain 2013</a></li>
 										<li><a href="#Italy 2012">Italy 2012</a></li>
 									</ul>
@@ -49,7 +51,7 @@
 								</div>
 								<div class="intro color1">
 									<h2 class="major">Greece 2019</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>This was a trip to various islands of Greece. First stop was Mykonos, then Naxos, Santorini and finally stopping in Crete.</p>
 									<ul class="actions">
 										<li><a href="#home" class="button primary color1 circle icon solid fa-angle-left">Home</a></li>
 									</ul>
@@ -75,7 +77,7 @@
 							<section class="panel" id="Alaska 2018">
 								<div class="intro color1">
 									<h2 class="major">Alaska 2018</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>This was our first cruise, to Alaska, starting in Vancouver. We cruised for 7 days, visiting Ketchican, Juneau, Skagway, Glacier Bay and stopping in Seward. We then continued on land to Denali National Park for a few days. We ended up in Anchorage.</p>
 									<ul class="actions">
 										<li><a href="#home" class="button primary color1 circle icon solid fa-angle-left">Home</a></li>
 									</ul>
@@ -104,7 +106,7 @@
 							<section class="panel" id="Europe 2017">
 								<div class="intro color1">
 									<h2 class="major">Europe 2017</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>Took our second trip to Europe visiting the following places: Amsterdam (Netherlands), Bruges (Belgium), Colmar (France), Strasbourg (France), Interlaken (Switzerland), Luxembourg (Luxembourg) and Haarlem (Netherlands).</p>
 									<ul class="actions">
 										<li><a href="#home" class="button primary color1 circle icon solid fa-angle-left">Home</a></li>
 									</ul>
@@ -133,7 +135,7 @@
 							<section class="panel" id="Europe 2016">
 								<div class="intro color1">
 									<h2 class="major">Europe 2016</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>Took our first trip to Europe visiting the following places: Luzerne (Switzerland), Hall (Austria), Salzburg (Austria), Hall (Austria), Hallstatt (Austria), Cesky Krumlove (Czech Repupublic), Prague (Czech Republic), Vienna (Austria) and Budapest (Hungary). </p>
 									<ul class="actions">
 										<li><a href="#home" class="button primary color1 circle icon solid fa-angle-left">Home</a></li>
 									</ul>
@@ -158,40 +160,11 @@
 								</div>
 							</section>
 
-						<!-- Panel Costa Rica 2015 -->
-							<section class="panel" id="Costa Rica 2015">
-								<div class="intro color1">
-									<h2 class="major">Costa Rica 2015</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
-									<ul class="actions">
-										<li><a href="#home" class="button primary color1 circle icon solid fa-angle-left">Home</a></li>
-									</ul>
-								</div>
-								<div class="image filtered tinted" data-position="top left">
-									<img src="images/gallery/Costa Rica/images/Cost_Turt_IMGP1583.jpg" alt="" />
-								</div>
-								<div class="gallery">
-									<div class="group span-3">
-										<a href="images/gallery/Costa Rica/images/Cost_Aren_IMGP1616.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/Costa Rica/images/Cost_Aren_IMGP1616.jpg" alt="" /></a>
-										<a href="images/gallery/Costa Rica/images/Cost_Aren_IMGP1648.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Costa Rica/images/Cost_Aren_IMGP1648.jpg" alt="" /></a>
-										<a href="images/gallery/Costa Rica/images/Cost_Aren_IMGP1670.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Costa Rica/images/Cost_Aren_IMGP1670.jpg" alt="" /></a>
-									</div>
-									<a href="images/gallery/Costa Rica/images/Cost_Aren_IMGP1672.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/Costa Rica/images/Cost_Aren_IMGP1672.jpg" alt="" /></a>
-									<div class="group span-4-5">
-										<a href="images/gallery/Costa Rica/images/Cost_Turt_IMGP1547.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Costa Rica/images/Cost_Turt_IMGP1547.jpg" alt="" /></a>
-										<a href="images/gallery/Costa Rica/images/Cost_Turt_IMGP1556.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Costa Rica/images/Cost_Turt_IMGP1556.jpg" alt="" /></a>
-										<a href="images/gallery/Costa Rica/images/Cost_Turt_IMGP1567.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Costa Rica/images/Cost_Turt_IMGP1567.jpg" alt="" /></a>
-										<a href="images/gallery/Costa Rica/images/Cost_Turt_IMGP1580.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Costa Rica/images/Cost_Turt_IMGP1580.jpg" alt="" /></a>
-									</div>
-									<a href="images/gallery/Costa Rica/images/Cost_Turt_IMGP1585.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/Costa Rica/images/Cost_Turt_IMGP1585.jpg" alt="" /></a>
-								</div>
-							</section>
-
 						<!-- Panel Peru 2015 -->
 							<section class="panel" id="Peru 2015">
 								<div class="intro color1">
 									<h2 class="major">Peru 2015</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>Our daughter was on a world trip, so we met her in Peru to share part of her trip.Places we visited were Lima, Cusco, Ollantaytambo, Aguas Calientes and Machu Picchu.</p>
 									<ul class="actions">
 										<li><a href="#home" class="button primary color1 circle icon solid fa-angle-left">Home</a></li>
 									</ul>
@@ -216,11 +189,40 @@
 								</div>
 							</section>
 
+						<!-- Panel Costa Rica 2015 -->
+							<section class="panel" id="Costa Rica 2015">
+								<div class="intro color1">
+									<h2 class="major">Costa Rica 2015</h2>
+									<p>Continuing our trip in Costa Rica with our daughter, we visited San Jose, Turtle Beach and Arenal. Turtle Beach was the jungle side of Costa Rica and Arenal was the rain forest side.</p>
+									<ul class="actions">
+										<li><a href="#home" class="button primary color1 circle icon solid fa-angle-left">Home</a></li>
+									</ul>
+								</div>
+								<div class="image filtered tinted" data-position="top left">
+									<img src="images/gallery/Costa Rica/images/Cost_Turt_IMGP1583.jpg" alt="" />
+								</div>
+								<div class="gallery">
+									<div class="group span-3">
+										<a href="images/gallery/Costa Rica/images/Cost_Aren_IMGP1616.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/Costa Rica/images/Cost_Aren_IMGP1616.jpg" alt="" /></a>
+										<a href="images/gallery/Costa Rica/images/Cost_Aren_IMGP1648.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Costa Rica/images/Cost_Aren_IMGP1648.jpg" alt="" /></a>
+										<a href="images/gallery/Costa Rica/images/Cost_Aren_IMGP1670.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Costa Rica/images/Cost_Aren_IMGP1670.jpg" alt="" /></a>
+									</div>
+									<a href="images/gallery/Costa Rica/images/Cost_Aren_IMGP1672.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/Costa Rica/images/Cost_Aren_IMGP1672.jpg" alt="" /></a>
+									<div class="group span-4-5">
+										<a href="images/gallery/Costa Rica/images/Cost_Turt_IMGP1547.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Costa Rica/images/Cost_Turt_IMGP1547.jpg" alt="" /></a>
+										<a href="images/gallery/Costa Rica/images/Cost_Turt_IMGP1556.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/Costa Rica/images/Cost_Turt_IMGP1556.jpg" alt="" /></a>
+										<a href="images/gallery/Costa Rica/images/Cost_Turt_IMGP1567.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/Costa Rica/images/Cost_Turt_IMGP1567.jpg" alt="" /></a>
+										<a href="images/gallery/Costa Rica/images/Cost_Turt_IMGP1580.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/Costa Rica/images/Cost_Turt_IMGP1580.jpg" alt="" /></a>
+									</div>
+									<a href="images/gallery/Costa Rica/images/Cost_Turt_IMGP1585.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/Costa Rica/images/Cost_Turt_IMGP1585.jpg" alt="" /></a>
+								</div>
+							</section>
+
 						<!-- Panel Spain 2013 -->
 							<section class="panel" id="Spain 2013">
 								<div class="intro color1">
 									<h2 class="major">Spain 2013</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>On our trip to Spain, we visited Madrid, Toledo, Ronda, Granada, Valencia, Montserrat and Barcelona.</p>
 									<ul class="actions">
 										<li><a href="#home" class="button primary color1 circle icon solid fa-angle-left">Home</a></li>
 									</ul>
@@ -249,7 +251,7 @@
 							<section class="panel" id="Italy 2012">
 								<div class="intro color1">
 									<h2 class="major">Italy 2012</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>On our trip to Italy, we visited Coreglia, Pisa, Cinque Terre, Venice, Siena and Florence.</p>
 									<ul class="actions">
 										<li><a href="#home" class="button primary color1 circle icon solid fa-angle-left">Home</a></li>
 									</ul>
@@ -278,6 +280,7 @@
 								<div class="intro color4">
 									<h2 class="major">Contact</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+                </div>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
